# ljcsandbox

./: .gitignore  LICENSE  README.org
admin/: screen.txt  subversion.txt  ubuntu.txt  varios.txt  vi.txt
android/: AndroidManifest.xml  update_version.sh
c/: helloworld.c
c++/: cdr  cdr14.cpp  colemak.cpp  helloworld.cpp  iota.cpp  linked_list_problems.cpp  sdl_example.cpp  tree_list_recursion.cpp
c++/euler/: README.org  euler.h  problem005.cpp  problem006.cpp  problem011.cpp  problem014.cpp
c++/jobqueue/: WorkQueue.h  main.cpp
c++/opengl/: Makefile  ex01.1.20.frag  ex01.1.20.vert  ex01.3.30.frag  ex01.3.30.vert  ex01.frag  ex02.3.30.vert  ex03.1.20.frag  ex03.3.30.vert  ex03a.1.20.vert  ex03a.3.30.frag  ex03b.1.20.frag  ex03b.1.20.vert  ex03b.3.30.frag  ex03b.3.30.vert  ex03c.1.20.frag  ex04.3.30.vert  fileutils.cpp  main.cpp  main01.cpp  main02.cpp  main03.cpp  main04.cpp  shaders.cpp  shaders.h
c++/sfml/: Makefile  example01.cpp
doc/: game_eval.tex  pc.txt
docker/: Dockerfile.ghci
edx/fp101x/: Parsing.lhs  countdown.lhs  lab2.hs  (+12 more)
haskell/: haskell.tex  helloworld.hs  helloworld.lhs  opengl.lhs
libros/cppprimer/c02/: CMakeLists.txt
linux/: bamboo.xinitrc  locate_rasp.sh  subshell.sh  toggleTouchpad.sh  udev_rules.d_99-touchpad-autotoggle.rules
make/: cpp.Makefile
octave/: cbezier.m  qbezier.m
programacion/: varios.txt
programas/: emacs.example  emacs.txt  example.tpp  multimedia.txt  uxrvt.txt  xmonad01.hs
programs/: bash.txt  emacs.ex01  gdb.org  git.txt  vi.txt
python/: convert.py  pyplot_colordot.py
scheme/: helloworld.scm
(+367 files in other folders)
